<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="4"
    tools:context=".PreferenceActivity">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:focusable="true"
        card_view:cardElevation="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/card1"
            android:padding="8dp">

            <TextView
                android:id="@+id/downloadHelp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_margin="4dp"
                android:text="@string/downloadHelp"
                android:textColor="@android:color/white" />


            <TextView
                android:id="@+id/download"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/downloadHelp"
                android:layout_centerHorizontal="true"
                android:layout_margin="4dp"
                android:text="@string/download"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />


            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_above="@id/download"
                android:layout_centerHorizontal="true"
                android:layout_margin="8dp"
                android:src="@drawable/download" />


        </RelativeLayout>

    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:focusable="true"
        card_view:cardElevation="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/card2"
            android:padding="8dp">


            <TextView
                android:id="@+id/tutorialHelp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_margin="4dp"
                android:text="@string/tutorialHelp"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/tutorial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/tutorialHelp"
                android:layout_centerHorizontal="true"
                android:layout_margin="4dp"
                android:text="@string/tutorial"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_above="@id/tutorial"
                android:layout_centerHorizontal="true"
                android:layout_margin="8dp"
                android:src="@drawable/help" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:focusable="true"
        card_view:cardElevation="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/card3"
            android:padding="8dp">

            <TextView
                android:id="@+id/sourceHelp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_margin="4dp"
                android:text="@string/sourceHelp"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/source"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/sourceHelp"
                android:layout_centerHorizontal="true"
                android:layout_margin="4dp"
                android:text="@string/source"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_above="@id/source"
                android:layout_centerHorizontal="true"
                android:layout_margin="8dp"
                android:src="@drawable/source_code" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:focusable="true"
        card_view:cardElevation="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/card4"
            android:padding="8dp">

            <TextView
                android:id="@+id/otherHelp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_margin="4dp"
                android:text="@string/aboutHelp"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/other"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/otherHelp"
                android:layout_centerHorizontal="true"
                android:layout_margin="4dp"
                android:text="@string/about"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_above="@id/other"
                android:layout_centerHorizontal="true"
                android:layout_margin="8dp"
                android:src="@drawable/apps" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
